--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/logistics
+spring.datasource.url=jdbc:mysql://192.168.1.64:3306/logistic_higgsup
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 
 higgsup.security.jwt.tokenExpirationTime=15
