--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,27 @@
-spring.datasource.url=jdbc:mysql://192.168.1.64:3306/logistic_higgsup
+spring.datasource.url=jdbc:mysql://192.168.1.10:3306/logistic_higgsup?ssl=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
-higgsup.security.jwt.tokenExpirationTime=15
+higgsup.security.jwt.tokenExpirationTime=60
 higgsup.security.jwt.refreshTokenExpTime=60
 higgsup.security.jwt.tokenIssuer=http://higgsup.com
 higgsup.security.jwt.tokenSigningKey=xm8EV6Hy5RMFK4EEACIDAwQus
 higgsup.security.config.ignore-urls=/public/test,/api/auth/**,/api/logout
 
+spring.jpa.show-sql=true
 
 higgsup.security.cors.allowed-origin=*
 higgsup.security.cors.allowed-header=*
 higgsup.security.cors.maxAge=36000
 higgsup.security.cors.allowed-method=GET,HEAD,POST,PUT,DELETE,OPTIONS
 
+spring.jmx.default-domain=log2
+
+#Cache
+spring.cache.type=ehcache
+spring.cache.ehcache.config=classpath:ehcache.xml
+
+#spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+#spring.jpa.properties.hibernate.cache.use_query_cache=true
+#spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
